# pharmacy-retail-sales-analytics

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
analysis/: deep_dive.py  eda.py  eda_notebook.html  eda_notebook.py  export_html.py
analysis/__marimo__/: eda_notebook.html
analysis/__marimo__/session/: eda_notebook.py.json
analysis/summaries/: margin_by_sku.csv  margin_distribution.csv  monthly_product_trend.csv  monthly_revenue.csv  monthly_revenue_trend.csv  monthly_stability.csv  price_tier_distribution.csv  product_transaction_crosstab.csv  revenue_by_product_type.csv  revenue_by_txn_type.csv  revenue_decomposition.csv  risk_skus_crosscheck.csv  sku_performance.csv  top20_skus.csv
dashboard/: README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  start-dev.bat  test-response.html  wrangler.toml
dashboard/public/data/: margin_risk.json  overview.json  products.json
dashboard/src/: types.ts
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/contexts/: data-context.tsx  settings-context.tsx
docs/: LEARNINGS.md  implementation-plan.md  insights_log.md  issues_log.md  pharmacy-etl-project-plan.md  qa_audit_report.md  scan-columns-coverage.md  shadboard-vs-marimo-analysis.md  wireframe-page1-executive-overview.md  wireframe-page2-product-performance.md  wireframe-page3-margin-risk.md
docs/data/: data-understanding.md
etl/: config.py  convert_and_load.py  export_json.py  extract.py  load.py  transform.py
sql/: 01_create_schema.sql  02_create_star_schema.sql
(+35 files in other folders)
