[project]
name = "pharmacy-sales-analytics"
version = "0.1.0"
description = "End-to-end ETL pipeline + interactive dashboard for hospital pharmacy retail sales analytics"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "plotly>=6.7.0",
    "marimo>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
]